Initial cards dealt with a timing instead of instantly for better feeling.